Request and UserComment mapper, service, repository - refactoring